[tool.poetry]
name = "code-agent"
version = "0.1.0"
description = "An AI-powered code and repository analysis tool"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "code_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
swarms = "6.8.0"
swarm-models = "^0.3.0"
setuptools = "^75.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"